# animal_api

./: pyproject.toml
app/: config.py  main.py
app/api_v1/posts/: posts.py
app/models/: core.py  database.py
